--- a/drivers/infiniband/hw/virtio/Makefile
+++ b/drivers/infiniband/hw/virtio/Makefile
@@ -2,4 +2,4 @@ obj-$(CONFIG_INFINIBAND_VIRTIO_RDMA) += virtio_rdma.o
 obj-m := virtio_rdma_rc_pingpong_client.o
 
 virtio_rdma-y := virtio_rdma_main.o virtio_rdma_device.o virtio_rdma_ib.o \
-		 virtio_rdma_netdev.o virtio_rdma_queue.o
+		 virtio_rdma_netdev.o virtio_rdma_queue.o virtio_rdma_mmap.o
